frontend/ecobridge-frontend/k8s/15-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecobridge-ingress
  namespace: ecobridge

spec:
  ingressClassName: nginx

  rules:
    - host: ecobridge.local

      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
